--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = git@github.com:Arthur-PI/42_libft.git
+[submodule "libmlx"]
+	path = libmlx
+	url = https://github.com/42Paris/minilibx-linux.git
